--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -433,3 +433,17 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   title           = {Numerical Method for Comparison on Homomorphically Encrypted Numbers},
   year            = {2019}
 }
+
+@article{ FrameDifferencing,
+  author          = {Intan Kartika and Shahrizat Shaik Mohamed},
+  journal         = {IEEE 7th International Colloquium on Signal Processing and its Applications},
+  title           = {Frame differencing with post-processing techniques for moving object detection in outdoor environment},
+  year            = {2011}
+}
+
+@article{ MeanFilter,
+  author          = {Ruolin Zhang and Jian Ding},
+  journal         = {Procedia Engineering},
+  title           = {Object Tracking and Detecting Based on Adaptive Background Subtraction},
+  year            = {2012}
+}
