--- a/proposal.tex
+++ b/proposal.tex
@@ -1,3 +1,7 @@
 \chapter{Project Proposal}
 \label{app:proposal}
 
+\indent \indent
+The original proposal for the project is included from the next page.
+
+\includepdf[pages=-]{originalProposal.pdf}
