--- a/originality.tex
+++ b/originality.tex
@@ -1,2 +1,14 @@
-\chapter{Declaration of Originality}
-\ldots DECLARATION OF ORIGINALITY \ldots
+\pagestyle{plain}
+
+\chapter*{Declaration of Originality}
+
+\indent \indent
+I, Jonathon Ackers of Girton College, being a candidate for Part II of the Computer Science Tripos, hereby declare that this dissertation and the work described in it are my own work, unaided except as may be specified below, and that the dissertation does not contain material that has already been used to any substantial extent for a comparable purpose. I am content for my dissertation to be made available to the students and staff of the University.
+
+\bigskip \bigskip
+
+Signed: Jonathon Ackers
+
+\bigskip \bigskip
+
+Date: 13\textsuperscript{th} May 2022
